--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,25 +18,35 @@ edition = "2024"
 #    ".gitlab-ci.yml",
 #]
 
+[features]
+# Default build contains no defmt stack to minimize size and overhead.
+default = []
+# Enable this feature to include defmt logging and RTT transport, and to turn on
+# defmt features in Embassy crates. Useful for development/debug builds.
+debug = [
+    "dep:defmt",
+    "dep:defmt-rtt",
+    "embassy-executor/defmt",
+    "embassy-rp/defmt",
+    "panic-probe/print-defmt",
+]
+
 [dependencies]
 embassy-executor = { version = "0.9.1", features = [
     "arch-cortex-m",
     "executor-thread",
-    "defmt",
 ] }
 panic-probe = { version = "1.0.0" }
 embassy-time = { version = "0.5.0" }
 embassy-rp = { version = "0.9.0", features = [
-    "defmt",
     "time-driver",
     "critical-section-impl",
     "rp235xa",
     "binary-info",
 ] }
-cortex-m = { version = "0.7.7" }
 cortex-m-rt = "0.7.5"
-defmt = "1.0.1"
-defmt-rtt = "1.1.0"
+defmt = { version = "1.0.1", optional = true }
+defmt-rtt = { version = "1.1.0", optional = true }
 
 [[bin]]
 name = "blaustein-led"
@@ -48,6 +58,6 @@ doctest = false
 [profile.release]
 opt-level = 3
 lto = true
-incremental = true
+incremental = false
 codegen-units = 1
 strip = "symbols"
